DevTools: fix Referer header handling in net interceptor

Bug: 777392
Change-Id: Ia5b000dcdb7ed78146a063a19ed982f01a83232f
Reviewed-on: https://chromium-review.googlesource.com/877509
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Andrey Lushnikov <lushnikov@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530961}
Former-commit-id: 2388c8d227803fd042be5290edd5a57b9898e0bf