content/browser/devtools/devtools_url_interceptor_request_job.h
@@ -91,6 +91,8 @@ class DevToolsURLInterceptorRequestJob : public net::URLRequestJob {
                    const std::string& method,
                    std::unique_ptr<net::UploadDataStream> post_data,
                    const net::HttpRequestHeaders& extra_request_headers,
+                   const std::string& referrer,
+                   net::URLRequest::ReferrerPolicy referrer_policy,
                    const net::RequestPriority& priority,
                    const net::URLRequestContext* url_request_context);
     ~RequestDetails();
@@ -99,6 +101,8 @@ class DevToolsURLInterceptorRequestJob : public net::URLRequestJob {
     std::string method;
     std::unique_ptr<net::UploadDataStream> post_data;
     net::HttpRequestHeaders extra_request_headers;
+    std::string referrer;
+    net::URLRequest::ReferrerPolicy referrer_policy;
     net::RequestPriority priority;
     const net::URLRequestContext* url_request_context;
   };
